--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -22,6 +22,23 @@
                 
                 <h1>T.C. Anayasası</h1>
 
+                <nav class="mb-8 bg-slate-50 shadow-sm p-4 rounded-lg border text-sm">
+                    <p class="font-bold text-slate-700 mb-2">📌 İçindekiler (Hızlı Erişim):</p>
+                    <ul class="list-disc pl-5 space-y-1">
+                        <li><a href="#genel-esaslar" class="text-teal-600 hover:underline">BİRİNCİ KISIM: Genel Esaslar</a>
+                            <ul class="list-['-_'] pl-5 space-y-1 mt-1">
+                                <li><a href="#madde-1" class="text-slate-600 hover:underline">Madde 1 - Devletin Şekli</a></li>
+                                <li><a href="#madde-2" class="text-slate-600 hover:underline">Madde 2 - Cumhuriyetin Nitelikleri</a></li>
+                                <li><a href="#madde-4" class="text-slate-600 hover:underline">Madde 4 - Değiştirilemez Hükümler</a></li>
+                                <li><a href="#kuvvetler-ayriligi" class="text-slate-600 hover:underline">Kavram Haritası: Kuvvetler Ayrılığı</a></li>
+                                <li><a href="#madde-10" class="text-slate-600 hover:underline">Madde 10 - Eşitlik İlkesi</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#temel-haklar" class="text-slate-400">İKİNCİ KISIM: Temel Haklar ve Ödevler (Yakında)</a></li>
+                        <li><a href="#devletin-organlari" class="text-slate-400">ÜÇÜNCÜ KISIM: Devletin Temel Organları (Yakında)</a></li>
+                    </ul>
+                </nav>
+
                 <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/testler/anayasa/" 
                    class="block my-8 p-4 bg-teal-50 border-l-4 border-teal-500 rounded-r-lg hover:shadow-lg transition-shadow duration-300">
                     <div class="flex items-center justify-between">
@@ -44,7 +61,7 @@
                     </p>
                 </div>
 
-                <h2>BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
+                <h2 id="genel-esaslar">BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
                 <p>
                     "Genel Esaslar", Anayasamızın giriş kapısı ve ruhudur. Devletin kimliğini, karakterini ve değiştirilemez temel direklerini bu bölümde buluruz. Bu 11 madde, Anayasa'nın geri kalanını anlamak için bir anahtar niteliğindedir ve sınavlarda sıkça yoklanır.
                 </p>
@@ -54,38 +71,40 @@
                     Anayasa'nın ilk dört maddesi bir bütündür ve devletin sarsılmaz temellerini oluşturur. Bu maddelerin değiştirilmesi teklif dahi edilemez. Bu özellik, Anayasamızın "sert" (katı) bir anayasa olduğunun en güçlü kanıtıdır.
                 </p>
 
-                <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli (Tıklayın)</summary>
+                <details id="madde-1" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli</summary>
                     <div class="mt-3 border-t pt-3">
                         <p><strong>Madde Metni:</strong> "Türkiye Devleti bir Cumhuriyettir."</p>
                         <p><strong>Hoca Yorumu:</strong> Bu madde, devletin yönetim biçimini net ve kesin olarak belirler. Monarşi, oligarşi gibi diğer yönetim biçimlerini reddeder ve yönetimin kaynağının halk olduğunu ima eder. Kısa ama Anayasa'nın en temel cümlesidir.</p>
                     </div>
                 </details>
 
-                <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 2 - Cumhuriyetin Nitelikleri (Tıklayın)</summary>
+                <details id="madde-2" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 2 - Cumhuriyetin Nitelikleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4">
-                            <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. Buradaki her bir kavram, potansiyel bir sınav sorusudur. "Aşağıdakilerden hangisi Cumhuriyetin niteliklerinden biri değildir?" sorusu klasiktir.</p>
+                        <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
+                            <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. Buradaki her bir kavram, potansiyel bir sınav sorusudur. "Aşağıdakilerden hangisi 1982 Anayasası'na göre Cumhuriyetin niteliklerinden biri değildir?" sorusu klasiktir.</p>
                         </div>
-                        <p><strong>Madde Metni:</strong> "Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p>
-                        
-                        <div class="ozet-kutusu mt-4">
-                            <p><strong>⚖️ Niteliklerin Anlamları:</strong></p>
-                            <ul class="list-none mt-2 space-y-2">
-                                <li><strong>Hukuk Devleti:</strong> Devletin tüm eylem ve işlemlerinin hukuka bağlı olması, keyfiliğin önlenmesi demektir.</li>
-                                <li><strong>Demokratik Devlet:</strong> Egemenliğin millete ait olması ve yönetimin seçimlerle belirlenmesidir.</li>
-                                <li><strong>Laik Devlet:</strong> Devletin tüm inançlara eşit mesafede durması ve hukuk kurallarını dine dayandırmamasıdır.</li>
-                                <li><strong>Sosyal Devlet:</strong> Devletin, toplumdaki zayıf ve dezavantajlı grupları koruyarak sosyal adaleti sağlamasıdır.</li>
-                            </ul>
+                        <blockquote><p>"Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
+                        <div class="mt-4 bg-pink-50 p-4 border-l-4 border-pink-500 rounded">
+                          <strong>⚠️ Karıştırmayın:</strong> 
+                          <ul class="list-disc mt-2 pl-5">
+                            <li><strong>Sosyal devlet ≠ Sosyalist devlet:</strong> Sosyal devlet, toplumdaki zayıfları koruyarak fırsat eşitliği sağlar; ancak özel mülkiyet hakkını ve serbest piyasayı ortadan kaldırmaz. Sosyalist devlet ise üretim araçlarının mülkiyetinin devlette olduğu bir ekonomik modeli ifade eder.</li>
+                          </ul>
+                        </div>
+                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
+                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test:</p>
+                          <ul class="list-disc pl-5 text-sky-800">
+                            <li>Madde 2'de sayılan Cumhuriyetin temel niteliklerinden üç tanesini sayınız.</li>
+                          </ul>
                         </div>
                     </div>
                 </details>
 
                 <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri (Tıklayın)</summary>
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar. Parçalara ayrılamaz.</p>
+                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar.</p>
                         <ul class="list-disc pl-5 mt-2">
                             <li><strong>Bütünlük:</strong> Ülkesi ve milletiyle bölünmez bir bütündür (Üniter Devlet).</li>
                             <li><strong>Dil:</strong> Türkçedir.</li>
@@ -96,10 +115,10 @@
                     </div>
                 </details>
 
-                <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 4 - Değiştirilemez Hükümler (Tıklayın)</summary>
+                <details id="madde-4" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 4 - Değiştirilemez Hükümler</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p><strong>Hoca Yorumu:</strong> Bu madde, ilk üç maddenin "kalkanı" veya "kilidi"dir. Bu maddenin varlığı sayesinde ilk üç maddenin değiştirilmesi <strong>teklif dahi edilemez</strong>. Sınavda bu "teklif dahi edilemez" ifadesi önemlidir.</p>
+                        <p><strong>Hoca Yorumu:</strong> Bu madde, ilk üç maddenin "kalkanı" veya "kilidi"dir. Bu maddenin varlığı sayesinde ilk üç maddenin değiştirilmesi <strong>teklif dahi edilemez</strong>. Sınavda bu "teklif dahi edilemez" ifadesi ayırt edici olabilir.</p>
                     </div>
                 </details>
 
@@ -108,15 +127,15 @@
                     Bu maddeler, devletin ne yapacağını, gücünü kimden aldığını ve bu gücü hangi kurallara göre kullanacağını belirler.
                 </p>
 
-                <div style="border: 1px solid #e2e8f0; border-radius: 8px; padding: 1.5rem; margin: 1rem 0;">
+                <div id="kuvvetler-ayriligi" style="border: 1px solid #e2e8f0; border-radius: 8px; padding: 1.5rem; margin: 1.5rem 0;">
                     <h4>📊 Kavram Haritası: Kuvvetler Ayrılığı (Madde 7, 8, 9)</h4>
                     <p class="text-sm text-slate-600 mb-3">Egemenliğin (Madde 6) üç farklı organ tarafından nasıl kullanıldığını gösteren temel tablo:</p>
                     <table class="w-full text-left border-collapse">
                         <thead>
-                            <tr>
-                                <th class="border-b-2 p-2 bg-slate-50">Kuvvet</th>
-                                <th class="border-b-2 p-2 bg-slate-50">Kullanan Organ</th>
-                                <th class="border-b-2 p-2 bg-slate-50">Temel Görevi</th>
+                            <tr class="bg-slate-50">
+                                <th class="border-b-2 p-2">Kuvvet</th>
+                                <th class="border-b-2 p-2">Kullanan Organ</th>
+                                <th class="border-b-2 p-2">Temel Görevi</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -139,8 +158,8 @@
                     </table>
                 </div>
 
-                <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi (Tıklayın)</summary>
+                <details id="madde-10" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi</summary>
                     <div class="mt-3 border-t pt-3">
                         <p>Herkesin dil, ırk, renk, cinsiyet gibi sebeplerle ayrım gözetilmeksizin kanun önünde eşit olduğunu belirtir. Hiç kimseye imtiyaz tanınamaz.</p>
                         <div class="uyari-kutusu mt-3">
