--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -23,26 +23,7 @@
                 
                 <h1>T.C. Anayasası</h1>
 
-                <nav class="mb-8 bg-slate-50 shadow-sm p-4 rounded-lg border text-sm">
-                    <p class="font-bold text-slate-700 mb-2">📌 İçindekiler (Hızlı Erişim):</p>
-                    <ul class="list-disc pl-5 space-y-1">
-                        <li><a href="#genel-esaslar" class="text-teal-600 hover:underline">BİRİNCİ KISIM: Genel Esaslar</a>
-                            <ul class="list-['-_'] pl-5 space-y-1 mt-1">
-                                <li><a href="#madde-1" class="text-slate-600 hover:underline">Madde 1 - Devletin Şekli</a></li>
-                                <li><a href="#madde-2" class="text-slate-600 hover:underline">Madde 2 - Cumhuriyetin Nitelikleri</a></li>
-                                <li><a href="#madde-3" class="text-slate-600 hover:underline">Madde 3 - Devletin Bütünlüğü</a></li>
-                                <li><a href="#madde-4" class="text-slate-600 hover:underline">Madde 4 - Değiştirilemez Hükümler</a></li>
-                                <li><a href="#madde-6" class="text-slate-600 hover:underline">Madde 6 - Egemenlik</a></li>
-                                <li><a href="#kuvvetler-ayriligi" class="text-slate-600 hover:underline">Kavram Haritası: Kuvvetler Ayrılığı</a></li>
-                                <li><a href="#madde-10" class="text-slate-600 hover:underline">Madde 10 - Eşitlik İlkesi</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#temel-haklar" class="text-slate-400">İKİNCİ KISIM: Temel Haklar ve Ödevler (Yakında)</a></li>
-                        <li><a href="#devletin-organlari" class="text-slate-400">ÜÇÜNCÜ KISIM: Devletin Temel Organları (Yakında)</a></li>
-                    </ul>
-                </nav>
-
-                <div class="my-8 p-6 rounded-lg bg-gradient-to-r from-teal-50 to-cyan-50 border-l-4 border-teal-500 shadow-md">
+                <div class="my-8 p-6 rounded-lg bg-gradient-to-r from-slate-50 to-slate-100 border-l-4 border-teal-500 shadow-md">
                     <div class="flex items-center">
                         <div class="flex-shrink-0">
                             <svg class="h-12 w-12 text-teal-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
@@ -50,19 +31,19 @@
                             </svg>
                         </div>
                         <div class="ml-4 flex-grow">
-                            <h3 class="font-bold text-slate-800 text-lg">Konuyu Pekiştirme Zamanı!</h3>
-                            <p class="text-slate-600">Öğrendiklerinizi Anayasa konu testleri ile hemen deneyin.</p>
+                            <h3 class="font-bold text-slate-800 text-lg">Anayasa Test Merkezi</h3>
+                            <p class="text-slate-600">Konu anlatımına başlamadan önce veya sonra, özel testlerle pratik yapın ve bilgilerinizi kalıcı hale getirin.</p>
                         </div>
                         <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/testler/anayasa/" class="ml-4 flex-shrink-0 px-4 py-2 bg-white text-teal-600 font-semibold rounded-lg shadow-sm border border-teal-200 hover:bg-teal-50 transition-colors">
-                            Test Merkezine Git
+                            Testlere Göz At
                         </a>
                     </div>
                 </div>
         
                 <div class="ozet-kutusu">
                     <p>
-                        <strong>Değerli Adaylar,</strong><br>
-                        T.C. Anayasası, Görevde Yükselme Sınavı'nın temelini oluşturan en önemli derstir. Bu derste, Anayasa'nın yoğun metnini sınavda karşınıza çıkacak en kritik noktalara odaklanarak, hafıza teknikleriyle ve anlaşılır bir dille işleyeceğiz. Amacımız ezberden uzak, kalıcı bir öğrenme sağlamaktır.
+                        <strong>Değerli Aday,</strong><br>
+                        Anayasa Hukuku, Görevde Yükselme Sınavı'nın hem en önemli hem de en çok çekinilen konularından biridir. Bu rehberde, Anayasa'nın karmaşık metnini, modern öğrenme teknikleriyle ayrıştırarak sınavda doğrudan puan getirecek, stratejik ve net bilgilere dönüştürüyoruz. Amacımız, sizi bir hukukçu gibi değil, bir sınav uzmanı gibi düşünmeye hazırlamaktır. Ezberi bir kenara bırakın, anlamaya ve kalıcı öğrenmeye odaklanın.
                     </p>
                 </div>
 
@@ -172,10 +153,10 @@
                 <div class="bg-green-100 p-4 rounded-lg shadow mt-8 border-l-4 border-green-600">
                   <strong class="text-green-800">✅ Bu Bölümde Öğrendiklerimiz:</strong>
                   <ul class="list-disc pl-5 mt-2 text-green-900">
-                    <li>Anayasa'nın ilk dört maddesinin değiştirilemez olduğunu ve neleri içerdiğini.</li>
-                    <li>Egemenliğin millete ait olduğunu ve bu yetkinin Yasama, Yürütme, Yargı organlarınca kullanıldığını.</li>
-                    <li>Hukuk devleti, sosyal devlet, laiklik gibi temel ilkelerin ne anlama geldiğini.</li>
-                    <li>Eşitlik ilkesinin kapsamını ve pozitif ayrımcılığın anayasal dayanağını.</li>
+                    <li>Anayasa'nın değiştirilemez hükümleri (Madde 1-4) ve anlamları.</li>
+                    <li>Egemenliğin millete ait olduğu ve bu yetkinin organlar eliyle kullanıldığı (Madde 6-9).</li>
+                    <li>Hukuk devleti, sosyal devlet, laiklik gibi temel ilkelerin ne anlama geldiği (Madde 2).</li>
+                    <li>Eşitlik ilkesinin kapsamı ve pozitif ayrımcılığın anayasal dayanağı (Madde 10).</li>
                   </ul>
                 </div>
 
