--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -27,7 +27,7 @@
                     <div class="flex items-center">
                         <div class="flex-shrink-0">
                             <svg class="h-12 w-12 text-teal-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C6.095 4.01 5.25 4.973 5.25 6.108V18.75c0 1.243.87 2.25 1.969 2.25H18A2.25 2.25 0 0020.25 18.75V8.25A2.25 2.25 0 0018 6H9.75A2.25 2.25 0 017.5 3.75m0 0A2.25 2.25 0 005.25 6" />
                             </svg>
                         </div>
                         <div class="ml-4 flex-grow">
@@ -41,10 +41,19 @@
                 </div>
         
                 <div class="ozet-kutusu">
-                    <p>
-                        <strong>Değerli Aday,</strong><br>
-                        Anayasa Hukuku, Görevde Yükselme Sınavı'nın hem en önemli hem de en çok çekinilen konularından biridir. Bu rehberde, Anayasa'nın karmaşık metnini, modern öğrenme teknikleriyle ayrıştırarak sınavda doğrudan puan getirecek, stratejik ve net bilgilere dönüştürüyoruz. Amacımız, sizi bir hukukçu gibi değil, bir sınav uzmanı gibi düşünmeye hazırlamaktır. Ezberi bir kenara bırakın, anlamaya ve kalıcı öğrenmeye odaklanın.
-                    </p>
+                    <div class="flex items-start">
+                        <div class="flex-shrink-0 pt-1">
+                            <svg class="h-8 w-8 text-teal-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0l-.07.004c-.03.004-.062.007-.094.011l-.093.012c-.032.004-.064.007-.096.011a24.89 24.89 0 00-2.348.491a24.89 24.89 0 00-2.348.491m15.482 0l-.07.004c-.03.004-.062.007-.094.011l-.093.012c-.032.004-.064.007-.096.011a24.89 24.89 0 002.348.491a24.89 24.89 0 002.348.491" />
+                            </svg>
+                        </div>
+                        <div class="ml-4">
+                            <p>
+                                <strong>Değerli Aday,</strong><br>
+                                Anayasa Hukuku, Görevde Yükselme Sınavı'nın hem en önemli hem de en çok çekinilen konularından biridir. Bu rehberde, Anayasa'nın karmaşık metnini, modern öğrenme teknikleriyle ayrıştırarak sınavda doğrudan puan getirecek, stratejik ve net bilgilere dönüştürüyoruz. Amacımız, sizi bir hukukçu gibi değil, bir sınav uzmanı gibi düşünmeye hazırlamaktır. Ezberi bir kenara bırakın, anlamaya ve kalıcı öğrenmeye odaklanın.
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
                 <h2 id="genel-esaslar">BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
@@ -145,7 +154,7 @@
                   <strong class="text-yellow-800">🎯 Hatırlıyor musun?</strong>
                   <ul class="list-disc pl-5 mt-2 text-yellow-900">
                     <li>Anayasa'nın değiştirilmesi teklif dahi edilemez maddeleri hangileridir?</li>
-                    <li>Cumhuriyetin temel niteliklerinden dördünü sayabilir misin?</li>
+                    <li>Cumhuriyetin temel niteliklerinden dördünü sayebilir misin?</li>
                     <li>Egemenliğin sahibi kimdir ve bu egemenlik hangi organlar eliyle kullanılır?</li>
                   </ul>
                 </div>
