--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -21,7 +21,21 @@
         <div class="card p-8 md:p-12">
             <article class="konu-icerik">
                 
-                <h1>T.C. Anayasası</h1>
+                <div class="text-center mb-10 pb-6 border-b">
+                    <div class="flex justify-center items-center gap-x-6">
+                        <svg class="h-12 w-12 text-red-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
+                            <path d="M339.63,222.12c-29-22.4-69.5-33.1-113.5-33.1-33.4,0-65.2,7.3-94.2,21.9,11.2,14,19.9,30.7,25.2,49.2,5.3-1.2,10.7-2.3,16.2-3.1,19.3-2.8,39.1-4.2,59.2-4.2,34.9,0,69.5,4.7,103.1,14.1,2.1-12.7,2.1-25.5,2-38.3C355.23,249.52,348.43,234.82,339.63,222.12Z"/>
+                            <path d="M496,256c0,132.5-107.5,240-240,240S16,388.5,16,256,123.5,16,256,16,496,123.5,496,256ZM256,48C141.3,48,48,141.3,48,256s93.3,208,208,208,208-93.3,208-208S370.7,48,256,48Z"/>
+                            <path d="M388.93,138.82,369.6,158.15l23.5,15.1-30.2,2.3-11.5,27.8-11.5-27.8-30.2-2.3,23.5-15.1-19.3-19.3,30.2,2.3L363.33,111l11.5,27.8Z"/>
+                        </svg>
+                        
+                        <h1 class="text-4xl md:text-5xl font-extrabold text-slate-800 py-4">T.C. Anayasası</h1>
+
+                        <svg class="h-12 w-12 text-slate-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.153.344c-1.619 0-3.21-.43-4.586-1.215a48.404 48.404 0 01-4.586-1.215c-.975 1.029-2.345 1.667-3.868 1.667-2.625 0-4.75-2.125-4.75-4.75S4.625 9.75 7.25 9.75s4.75 2.125 4.75 4.75c0 1.523-.744 2.894-1.868 3.868m12.332-5.168a48.403 48.403 0 01-4.586-1.215c-1.619-.785-3.21-.43-4.586 1.215m13.332-3.468a48.416 48.416 0 01-6.75-.47m-6.75.47l-3 .52m3-.52l-2.62 10.726c-.122.499.106 1.028.589 1.202a5.989 5.989 0 002.153.344c1.619 0 3.21-.43 4.586-1.215" />
+                        </svg>
+                    </div>
+                </div>
 
                 <div class="my-8 p-6 rounded-lg bg-gradient-to-r from-slate-50 to-slate-100 border-l-4 border-teal-500 shadow-md">
                     <div class="flex items-center">
@@ -56,7 +70,7 @@
                     </div>
                 </div>
 
-                <h2 id="genel-esaslar">BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
+                <h2 id="genel-esaslar">BİRİNÇİ KISIM: Genel Esaslar (Madde 1-11)</h2>
                 <p>
                     "Genel Esaslar", Anayasamızın giriş kapısı ve ruhudur. Devletin kimliğini, karakterini ve değiştirilemez temel direklerini bu bölümde buluruz. Bu 11 madde, Anayasa'nın geri kalanını anlamak için bir anahtar niteliğindedir ve sınavlarda sıkça yoklanır.
                 </p>
@@ -154,7 +168,7 @@
                   <strong class="text-yellow-800">🎯 Hatırlıyor musun?</strong>
                   <ul class="list-disc pl-5 mt-2 text-yellow-900">
                     <li>Anayasa'nın değiştirilmesi teklif dahi edilemez maddeleri hangileridir?</li>
-                    <li>Cumhuriyetin temel niteliklerinden dördünü sayebilir misin?</li>
+                    <li>Cumhuriyetin temel niteliklerinden dördünü sayabilir misin?</li>
                     <li>Egemenliğin sahibi kimdir ve bu egemenlik hangi organlar eliyle kullanılır?</li>
                   </ul>
                 </div>
