--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -23,16 +23,22 @@
                 
                 <div class="text-center mb-10 pb-6 border-b">
                     <div class="flex justify-center items-center gap-x-6">
-                        <svg class="h-12 w-12 text-red-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
-                            <path d="M339.63,222.12c-29-22.4-69.5-33.1-113.5-33.1-33.4,0-65.2,7.3-94.2,21.9,11.2,14,19.9,30.7,25.2,49.2,5.3-1.2,10.7-2.3,16.2-3.1,19.3-2.8,39.1-4.2,59.2-4.2,34.9,0,69.5,4.7,103.1,14.1,2.1-12.7,2.1-25.5,2-38.3C355.23,249.52,348.43,234.82,339.63,222.12Z"/>
-                            <path d="M496,256c0,132.5-107.5,240-240,240S16,388.5,16,256,123.5,16,256,16,496,123.5,496,256ZM256,48C141.3,48,48,141.3,48,256s93.3,208,208,208,208-93.3,208-208S370.7,48,256,48Z"/>
-                            <path d="M388.93,138.82,369.6,158.15l23.5,15.1-30.2,2.3-11.5,27.8-11.5-27.8-30.2-2.3,23.5-15.1-19.3-19.3,30.2,2.3L363.33,111l11.5,27.8Z"/>
+                        <svg class="h-14 w-14 text-red-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 250 250" fill="currentColor">
+                            <path d="M125,0C55.964,0,0,55.964,0,125s55.964,125,125,125s125-55.964,125-125S194.036,0,125,0z M199.554,166.383
+                                c-2.909,0-5.617-0.457-8.158-1.319c-14.735-4.968-28.113-13.842-39.293-25.996c-11.458-12.441-20.315-27.289-25.83-43.721
+                                c-5.516-16.432-7.525-33.882-6.142-51.52c1.383-17.639,6.042-34.85,13.737-50.685c1.176-2.422,3.953-3.728,6.588-2.959
+                                c2.635,0.769,4.223,3.404,3.454,6.039c-6.845,14.225-10.975,29.563-12.201,45.479c-1.226,15.916,0.573,31.604,5.435,46.331
+                                c4.862,14.727,12.59,27.854,22.646,38.824c10.312,11.236,22.954,19.389,36.55,23.822c2.569,0.835,4.018,3.469,3.183,6.038
+                                C204.446,165.176,202.062,166.383,199.554,166.383z"/>
+                            <path d="M153.368,137.211l-24.632-15.823l9.539-22.99l-24.632,6.961l-15.823-24.632l-6.961,24.632l-22.99-9.539
+                                l15.823,24.632l-24.632,6.961l22.99,9.539l-6.961,24.632l24.632-15.823l9.539,22.99l6.961-24.632l24.632,15.823l-9.539-22.99
+                                l24.632-6.961l-22.99-9.539L153.368,137.211z"/>
                         </svg>
                         
                         <h1 class="text-4xl md:text-5xl font-extrabold text-slate-800 py-4">T.C. Anayasası</h1>
 
                         <svg class="h-12 w-12 text-slate-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.153.344c-1.619 0-3.21-.43-4.586-1.215a48.404 48.404 0 01-4.586-1.215c-.975 1.029-2.345 1.667-3.868 1.667-2.625 0-4.75-2.125-4.75-4.75S4.625 9.75 7.25 9.75s4.75 2.125 4.75 4.75c0 1.523-.744 2.894-1.868 3.868m12.332-5.168a48.403 48.403 0 01-4.586-1.215c-1.619-.785-3.21-.43-4.586 1.215m13.332-3.468a48.416 48.416 0 01-6.75-.47m-6.75.47l-3 .52m3-.52l-2.62 10.726c-.122.499.106 1.028.589 1.202a5.989 5.989 0 002.153.344c1.619 0 3.21-.43 4.586-1.215" />
+                           <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.153.344c-1.619 0-3.21-.43-4.586-1.215a48.404 48.404 0 01-4.586-1.215c-.975 1.029-2.345 1.667-3.868 1.667-2.625 0-4.75-2.125-4.75-4.75S4.625 9.75 7.25 9.75s4.75 2.125 4.75 4.75c0 1.523-.744 2.894-1.868 3.868m12.332-5.168a48.403 48.403 0 01-4.586-1.215c-1.619-.785-3.21-.43-4.586 1.215m13.332-3.468a48.416 48.416 0 01-6.75-.47m-6.75.47l-3 .52m3-.52l-2.62 10.726c-.122.499.106 1.028.589 1.202a5.989 5.989 0 002.153.344c1.619 0 3.21-.43 4.586-1.215" />
                         </svg>
                     </div>
                 </div>
@@ -70,7 +76,7 @@
                     </div>
                 </div>
 
-                <h2 id="genel-esaslar">BİRİNÇİ KISIM: Genel Esaslar (Madde 1-11)</h2>
+                <h2 id="genel-esaslar">BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
                 <p>
                     "Genel Esaslar", Anayasamızın giriş kapısı ve ruhudur. Devletin kimliğini, karakterini ve değiştirilemez temel direklerini bu bölümde buluruz. Bu 11 madde, Anayasa'nın geri kalanını anlamak için bir anahtar niteliğindedir ve sınavlarda sıkça yoklanır.
                 </p>
@@ -81,7 +87,7 @@
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli</summary>
                     <div class="mt-3 border-t pt-3">
                         <blockquote><p>"Türkiye Devleti bir Cumhuriyettir."</p></blockquote>
-                        <p><strong>Hoca Yorumu:</strong> Bu madde, devletin yönetim biçimini net ve kesin olarak belirler. Monarşi gibi diğer yönetim biçimlerini reddeder ve yönetimin kaynağının halk olduğunu ima eder. Kısa ama Anayasa'nın en temel cümlesidir.</p>
+                        <p><strong>Hoca Yorumu:</strong> Bu madde, devletin yönetim biçimini net ve kesin olarak belirler.</p>
                     </div>
                 </details>
 
@@ -89,13 +95,13 @@
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 2 - Cumhuriyetin Nitelikleri</summary>
                     <div class="mt-3 border-t pt-3">
                         <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
-                            <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. Buradaki her bir kavram, potansiyel bir sınav sorusudur. "Aşağıdakilerden hangisi 1982 Anayasası'na göre Cumhuriyetin niteliklerinden biri değildir?" sorusu klasiktir.</p>
+                            <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. "Aşağıdakilerden hangisi 1982 Anayasası'na göre Cumhuriyetin niteliklerinden biri değildir?" sorusu klasiktir.</p>
                         </div>
                         <blockquote><p>"Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
                         <div class="mt-4 bg-pink-50 p-4 border-l-4 border-pink-500 rounded">
                           <strong>⚠️ Karıştırmayın:</strong> 
                           <ul class="list-disc mt-2 pl-5">
-                            <li><strong>Sosyal devlet ≠ Sosyalist devlet:</strong> Sosyal devlet, toplumdaki zayıfları koruyarak fırsat eşitliği sağlar; ancak özel mülkiyet hakkını ortadan kaldırmaz. Sosyalist devlet ise üretim araçlarının mülkiyetinin devlette olduğu bir ekonomik modeli ifade eder.</li>
+                            <li><strong>Sosyal devlet ≠ Sosyalist devlet:</strong> Sosyal devlet, fırsat eşitliği sağlar; mülkiyet hakkını ortadan kaldırmaz. Sosyalist devlet ise üretim araçlarının mülkiyetini devlete devreder.</li>
                           </ul>
                         </div>
                     </div>
@@ -104,7 +110,6 @@
                 <details id="madde-3" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar. Parçalara ayrılamaz.</p>
                         <ul class="list-disc pl-5 mt-2">
                             <li><strong>Bütünlük:</strong> Ülkesi ve milletiyle bölünmez bir bütündür (Üniter Devlet).</li>
                             <li><strong>Dil:</strong> Türkçedir.</li>
@@ -118,16 +123,26 @@
                 <details id="madde-4" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 4 - Değiştirilemez Hükümler</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p><strong>Hoca Yorumu:</strong> Bu madde, ilk üç maddenin "kalkanı" veya "kilidi"dir. Bu maddenin varlığı sayesinde ilk üç maddenin değiştirilmesi <strong>teklif dahi edilemez</strong>. Sınavda bu "teklif dahi edilemez" ifadesi ayırt edici olabilir.</p>
+                        <p><strong>Hoca Yorumu:</strong> Bu madde, ilk üç maddenin "kalkanı"dır. Bu sayede ilk üç maddenin değiştirilmesi <strong>teklif dahi edilemez</strong>.</p>
                     </div>
                 </details>
 
                 <h3>Madde 5-11: Devletin "Görev Tanımı" ve Temel İlkeler</h3>
 
+                <details id="madde-5" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
+                    <div class="mt-3 border-t pt-3">
+                        <blockquote><p>"Devletin temel amaç ve görevleri, Türk milletinin bağımsızlığını ve bütünlüğünü, ülkenin bölünmezliğini, Cumhuriyeti ve demokrasiyi korumak, kişilerin ve toplumun refah, huzur ve mutluluğunu sağlamak; kişinin temel hak ve hürriyetlerini, sosyal hukuk devleti ve adalet ilkeleriyle bağdaşmayacak surette sınırlayan siyasal, ekonomik ve sosyal engelleri kaldırmaya, insanın maddi ve manevi varlığının gelişmesi için gerekli şartları hazırlamaya çalışmaktır."</p></blockquote>
+                        <div class="uyari-kutusu mt-3">
+                            <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
+                        </div>
+                    </div>
+                </details>
+
                 <details id="madde-6" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                     <div class="mt-3 border-t pt-3">
-                        <blockquote><p>Egemenlik, kayıtsız şartsız Milletindir. Millet, egemenliğini Anayasa’nın koyduğu esaslara göre ve yetkili organlar eliyle kullanır. Hiçbir kimse veya organ, kaynağını Anayasa’dan almayan bir Devlet yetkisi kullanamaz.</p></blockquote>
+                        <blockquote><p>Egemenlik, kayıtsız şartsız Milletindir...</p></blockquote>
                         <div class="mt-3 bg-sky-50 p-3 border-l-4 border-sky-500 rounded">
                           <p><strong>Hoca Yorumu:</strong> Bu madde, kuvvetler ayrılığı ilkesinin (Madde 7-8-9) anayasal dayanağıdır. Devletin gücünün tek kaynağı Millettir ve bu güç, Millet adına "yetkili organlarca" kullanılır.</p>
                         </div>
@@ -136,7 +151,6 @@
 
                 <div id="kuvvetler-ayriligi" style="border: 1px solid #e2e8f0; border-radius: 8px; padding: 1.5rem; margin: 1.5rem 0;">
                     <h4>📊 Kavram Haritası: Kuvvetler Ayrılığı (Madde 7, 8, 9)</h4>
-                    <p class="text-sm text-slate-600 mb-3">Egemenliğin (Madde 6) üç farklı organ tarafından nasıl kullanıldığını gösteren temel tablo:</p>
                     <table class="w-full text-left border-collapse">
                         <thead>
                             <tr class="bg-slate-50">
@@ -156,30 +170,29 @@
                 <details id="madde-10" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p>Herkesin dil, ırk, renk, cinsiyet gibi sebeplerle ayrım gözetilmeksizin kanun önünde eşit olduğunu belirtir. Hiç kimseye imtiyaz tanınamaz.</p>
                         <div class="uyari-kutusu mt-3">
                             <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
-                            Bu madde aynı zamanda "pozitif ayrımcılığı" da güvence altına alır. Yani, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir. <br><strong>Günlük Hayattan Örnek:</strong> Kamu binalarına engelli rampası yapılması, diğer vatandaşlara göre bir "imtiyaz" değil, engelli vatandaşın eşitlikten faydalanmasını sağlayan bir "pozitif ayrımcılık" örneğidir.</p>
+                            Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir. <br><strong>Örnek:</strong> Engelli bir bireye kamu hizmetlerinde öncelik tanınması, bir "imtiyaz" değil, o kişinin diğerleriyle eşit fırsatlara sahip olmasını sağlayan bir "pozitif ayrımcılık" uygulamasıdır.</p>
                         </div>
                     </div>
                 </details>
 
-                <div class="bg-yellow-100 p-4 rounded-lg shadow mt-8 border-l-4 border-yellow-500">
-                  <strong class="text-yellow-800">🎯 Hatırlıyor musun?</strong>
-                  <ul class="list-disc pl-5 mt-2 text-yellow-900">
-                    <li>Anayasa'nın değiştirilmesi teklif dahi edilemez maddeleri hangileridir?</li>
-                    <li>Cumhuriyetin temel niteliklerinden dördünü sayabilir misin?</li>
-                    <li>Egemenliğin sahibi kimdir ve bu egemenlik hangi organlar eliyle kullanılır?</li>
-                  </ul>
-                </div>
+                <details id="madde-11" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <summary class="font-semibold text-lg cursor-pointer">📘 Madde 11 - Anayasanın Üstünlüğü</summary>
+                    <div class="mt-3 border-t pt-3">
+                        <blockquote><p>Anayasa hükümleri, yasama, yürütme ve yargı organlarını, idare makamlarını ve diğer kuruluş ve kişileri bağlayan temel hukuk kurallarıdır. Kanunlar Anayasaya aykırı olamaz.</p></blockquote>
+                        <p><strong>Hoca Yorumu:</strong> Bu, "Normlar Hiyerarşisi" ilkesinin temelidir. Hiçbir kanun veya kural, Anayasa'dan daha üstün değildir.</p>
+                    </div>
+                </details>
 
                 <div class="bg-green-100 p-4 rounded-lg shadow mt-8 border-l-4 border-green-600">
                   <strong class="text-green-800">✅ Bu Bölümde Öğrendiklerimiz:</strong>
                   <ul class="list-disc pl-5 mt-2 text-green-900">
                     <li>Anayasa'nın değiştirilemez hükümleri (Madde 1-4) ve anlamları.</li>
+                    <li>Devletin temel amaç ve görevlerinin neler olduğu (Madde 5).</li>
                     <li>Egemenliğin millete ait olduğu ve bu yetkinin organlar eliyle kullanıldığı (Madde 6-9).</li>
-                    <li>Hukuk devleti, sosyal devlet, laiklik gibi temel ilkelerin ne anlama geldiği (Madde 2).</li>
-                    <li>Eşitlik ilkesinin kapsamı ve pozitif ayrımcılığın anayasal dayanağı (Madde 10).</li>
+                    <li>Eşitlik ilkesi ve pozitif ayrımcılığın anayasal dayanağı (Madde 10).</li>
+                    <li>Anayasanın hukuki üstünlüğü ve bağlayıcılığı (Madde 11).</li>
                   </ul>
                 </div>
 
