--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -30,7 +30,7 @@
                     <div class="flex items-center">
                         <div class="flex-shrink-0">
                             <svg class="h-12 w-12 text-teal-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C6.095 4.01 5.25 4.973 5.25 6.108V18.75c0 1.243.87 2.25 1.969 2.25H18A2.25 2.25 0 0020.25 18.75V8.25A2.25 2.25 0 0018 6H9.75A2.25 2.25 0 017.5 3.75m0 0A2.25 2.25 0 005.25 6" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C6.095 4.01 5.25 4.973 5.25 6.108V18.75c0 1.243.87 2.25 1.969 2.25H18A2.25 2.25 0 002.025 18.75V8.25A2.25 2.25 0 0018 6H9.75A2.25 2.25 0 017.5 3.75m0 0A2.25 2.25 0 005.25 6" />
                             </svg>
                         </div>
                         <div class="ml-4 flex-grow">
@@ -80,12 +80,17 @@
                         <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
                             <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. "Aşağıdakilerden hangisi 1982 Anayasası'na göre Cumhuriyetin niteliklerinden biri değildir?" sorusu klasiktir.</p>
                         </div>
-                        <blockquote><p>"Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
-                        <div class="mt-4 bg-pink-50 p-4 border-l-4 border-pink-500 rounded">
-                          <strong>⚠️ Karıştırmayın:</strong> 
-                          <ul class="list-disc mt-2 pl-5">
-                            <li><strong>Sosyal devlet ≠ Sosyalist devlet:</strong> Sosyal devlet, fırsat eşitliği sağlar; mülkiyet hakkını ortadan kaldırmaz. Sosyalist devlet ise üretim araçlarının mülkiyetini devlete devreder.</li>
-                          </ul>
+                        <div class="uyari-kutusu my-4">
+                            <p><strong>🧠 Hafıza Tekniği (Kodlama):</strong> Madde 2'deki temel nitelikleri unutmamak için şu kodlamayı kullanabilirsiniz: <strong>"İLAHİ D-S"</strong></p>
+                            <ul class="list-none mt-2 space-y-1 font-mono">
+                                <li><strong>İ</strong>nsan haklarına saygılı</li>
+                                <li><strong>L</strong>aik</li>
+                                <li><strong>A</strong>tatürk milliyetçiliğine bağlı</li>
+                                <li><strong>H</strong>ukuk devleti</li>
+                                <li><strong>İ</strong>lkelere (Başlangıç) dayanan</li>
+                                <li><strong>D</strong>emokratik</li>
+                                <li><strong>S</strong>osyal</li>
+                            </ul>
                         </div>
                     </div>
                 </details>
@@ -93,13 +98,11 @@
                 <details id="madde-3" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <ul class="list-disc pl-5 mt-2">
-                            <li><strong>Bütünlük:</strong> Ülkesi ve milletiyle bölünmez bir bütündür (Üniter Devlet).</li>
-                            <li><strong>Dil:</strong> Türkçedir.</li>
-                            <li><strong>Bayrak:</strong> Beyaz ay yıldızlı al bayraktır.</li>
-                            <li><strong>Milli Marş:</strong> "İstiklal Marşı"dır.</li>
-                            <li><strong>Başkent:</strong> Ankara'dır.</li>
-                        </ul>
+                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar. Parçalara ayrılamaz.</p>
+                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
+                            <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test:</p>
+                            <p class="text-sky-800">Türkiye Devleti'nin başkenti hangi maddedir?</p>
+                        </div>
                     </div>
                 </details>
 
@@ -115,8 +118,7 @@
                  <details id="madde-5" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <blockquote><p>"Devletin temel amaç ve görevleri, Türk milletinin bağımsızlığını ve bütünlüğünü... korumak, kişilerin ve toplumun refah, huzur ve mutluluğunu sağlamak... engelleri kaldırmaya, insanın maddi ve manevi varlığının gelişmesi için gerekli şartları hazırlamaya çalışmaktır."</p></blockquote>
-                        <div class="uyari-kutusu mt-3">
+                         <div class="uyari-kutusu mt-3">
                             <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
                         </div>
                     </div>
@@ -125,9 +127,8 @@
                 <details id="madde-6" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                     <div class="mt-3 border-t pt-3">
-                        <blockquote><p>Egemenlik, kayıtsız şartsız Milletindir...</p></blockquote>
                         <div class="mt-3 bg-sky-50 p-3 border-l-4 border-sky-500 rounded">
-                          <p><strong>Hoca Yorumu:</strong> Bu madde, kuvvetler ayrılığı ilkesinin (Madde 7-8-9) anayasal dayanağıdır. Devletin gücünün tek kaynağı Millettir ve bu güç, Millet adına "yetkili organlarca" kullanılır.</p>
+                          <p><strong>Hoca Yorumu:</strong> Bu madde, kuvvetler ayrılığı ilkesinin (Madde 7-8-9) anayasal dayanağıdır. Devletin gücünün tek kaynağı Millettir.</p>
                         </div>
                     </div>
                 </details>
@@ -155,7 +156,7 @@
                     <div class="mt-3 border-t pt-3">
                         <div class="uyari-kutusu mt-3">
                             <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
-                            Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir. <br><strong>Örnek:</strong> Engelli bir bireye kamu hizmetlerinde öncelik tanınması, bir "imtiyaz" değil, o kişinin diğerleriyle eşit fırsatlara sahip olmasını sağlayan bir "pozitif ayrımcılık" uygulamasıdır.</p>
+                            Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir. </p>
                         </div>
                     </div>
                 </details>
@@ -163,8 +164,7 @@
                 <details id="madde-11" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 11 - Anayasanın Üstünlüğü</summary>
                     <div class="mt-3 border-t pt-3">
-                        <blockquote><p>Anayasa hükümleri, yasama, yürütme ve yargı organlarını, idare makamlarını ve diğer kuruluş ve kişileri bağlayan temel hukuk kurallarıdır. Kanunlar Anayasaya aykırı olamaz.</p></blockquote>
-                        <p><strong>Hoca Yorumu:</strong> Bu, "Normlar Hiyerarşisi" ilkesinin temelidir. Hiçbir kanun veya kural, Anayasa'dan daha üstün değildir.</p>
+                         <p><strong>Hoca Yorumu:</strong> Bu, "Normlar Hiyerarşisi" ilkesinin temelidir. Hiçbir kanun veya kural, Anayasa'dan daha üstün değildir.</p>
                     </div>
                 </details>
                 
