--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -30,7 +30,7 @@
                     <div class="flex items-center">
                         <div class="flex-shrink-0">
                             <svg class="h-12 w-12 text-teal-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C6.095 4.01 5.25 4.973 5.25 6.108V18.75c0 1.243.87 2.25 1.969 2.25H18A2.25 2.25 0 002.025 18.75V8.25A2.25 2.25 0 0018 6H9.75A2.25 2.25 0 017.5 3.75m0 0A2.25 2.25 0 005.25 6" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C6.095 4.01 5.25 4.973 5.25 6.108V18.75c0 1.243.87 2.25 1.969 2.25H18A2.25 2.25 0 0020.25 18.75V8.25A2.25 2.25 0 0018 6H9.75A2.25 2.25 0 017.5 3.75m0 0A2.25 2.25 0 005.25 6" />
                             </svg>
                         </div>
                         <div class="ml-4 flex-grow">
@@ -60,17 +60,17 @@
                 </div>
 
                 <h2 id="genel-esaslar">BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
-                <p>
-                    "Genel Esaslar", Anayasamızın giriş kapısı ve ruhudur. Devletin kimliğini, karakterini ve değiştirilemez temel direklerini bu bölümde buluruz. Bu 11 madde, Anayasa'nın geri kalanını anlamak için bir anahtar niteliğindedir ve sınavlarda sıkça yoklanır.
-                </p>
-
+                
                 <h3>Madde 1-4: Devletin "Çekirdek Ailesi" - Değiştirilemez Hükümler</h3>
                 
                 <details id="madde-1" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli</summary>
                     <div class="mt-3 border-t pt-3">
                         <blockquote><p>"Türkiye Devleti bir Cumhuriyettir."</p></blockquote>
-                        <p><strong>Hoca Yorumu:</strong> Bu madde, devletin yönetim biçimini net ve kesin olarak belirler.</p>
+                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
+                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test (Boşluk Doldurma):</p>
+                          <p class="text-sky-800">Türkiye Devleti bir ...................... .</p>
+                        </div>
                     </div>
                 </details>
 
@@ -78,18 +78,12 @@
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 2 - Cumhuriyetin Nitelikleri</summary>
                     <div class="mt-3 border-t pt-3">
                         <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
-                            <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. "Aşağıdakilerden hangisi 1982 Anayasası'na göre Cumhuriyetin niteliklerinden biri değildir?" sorusu klasiktir.</p>
+                            <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. Buradaki her bir kavram, potansiyel bir sınav sorusudur.</p>
                         </div>
                         <div class="uyari-kutusu my-4">
                             <p><strong>🧠 Hafıza Tekniği (Kodlama):</strong> Madde 2'deki temel nitelikleri unutmamak için şu kodlamayı kullanabilirsiniz: <strong>"İLAHİ D-S"</strong></p>
                             <ul class="list-none mt-2 space-y-1 font-mono">
-                                <li><strong>İ</strong>nsan haklarına saygılı</li>
-                                <li><strong>L</strong>aik</li>
-                                <li><strong>A</strong>tatürk milliyetçiliğine bağlı</li>
-                                <li><strong>H</strong>ukuk devleti</li>
-                                <li><strong>İ</strong>lkelere (Başlangıç) dayanan</li>
-                                <li><strong>D</strong>emokratik</li>
-                                <li><strong>S</strong>osyal</li>
+                                <li><strong>İ</strong>nsan haklarına saygılı</li><li><strong>L</strong>aik</li><li><strong>A</strong>tatürk milliyetçiliğine bağlı</li><li><strong>H</strong>ukuk devleti</li><li><strong>İ</strong>lkelere (Başlangıç) dayanan</li><li><strong>D</strong>emokratik</li><li><strong>S</strong>osyal</li>
                             </ul>
                         </div>
                     </div>
@@ -98,10 +92,10 @@
                 <details id="madde-3" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar. Parçalara ayrılamaz.</p>
+                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar.</p>
                         <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
-                            <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test:</p>
-                            <p class="text-sky-800">Türkiye Devleti'nin başkenti hangi maddedir?</p>
+                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test (Doğru/Yanlış):</p>
+                          <p class="text-sky-800">Anayasa'ya göre Türkiye Devleti'nin dili Türkçe'dir. (Doğru/Yanlış)</p>
                         </div>
                     </div>
                 </details>
@@ -118,7 +112,7 @@
                  <details id="madde-5" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
                     <div class="mt-3 border-t pt-3">
-                         <div class="uyari-kutusu mt-3">
+                        <div class="uyari-kutusu mt-3">
                             <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
                         </div>
                     </div>
@@ -127,28 +121,39 @@
                 <details id="madde-6" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                     <div class="mt-3 border-t pt-3">
-                        <div class="mt-3 bg-sky-50 p-3 border-l-4 border-sky-500 rounded">
-                          <p><strong>Hoca Yorumu:</strong> Bu madde, kuvvetler ayrılığı ilkesinin (Madde 7-8-9) anayasal dayanağıdır. Devletin gücünün tek kaynağı Millettir.</p>
+                        <blockquote><p>Egemenlik, kayıtsız şartsız Milletindir...</p></blockquote>
+                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
+                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test:</p>
+                          <p class="text-sky-800">Egemenlik kimindir ve hangi organlar eliyle kullanılır?</p>
                         </div>
                     </div>
                 </details>
 
-                <div id="kuvvetler-ayriligi" style="border: 1px solid #e2e8f0; border-radius: 8px; padding: 1.5rem; margin: 1.5rem 0;">
-                    <h4>📊 Kavram Haritası: Kuvvetler Ayrılığı (Madde 7, 8, 9)</h4>
-                    <table class="w-full text-left border-collapse">
-                        <thead>
-                            <tr class="bg-slate-50">
-                                <th class="border-b-2 p-2">Kuvvet</th>
-                                <th class="border-b-2 p-2">Kullanan Organ</th>
-                                <th class="border-b-2 p-2">Temel Görevi</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr><td class="border-b p-2"><strong>Yasama</strong></td><td class="border-b p-2">T.B.M.M.</td><td class="border-b p-2">Kanun yapmak.</td></tr>
-                            <tr><td class="border-b p-2"><strong>Yürütme</strong></td><td class="border-b p-2">Cumhurbaşkanı</td><td class="border-b p-2">Kanunları uygulamak.</td></tr>
-                            <tr><td class="border-b p-2"><strong>Yargı</strong></td><td class="border-b p-2">Bağımsız ve Tarafsız Mahkemeler</td><td class="border-b p-2">Uyuşmazlıkları çözmek.</td></tr>
-                        </tbody>
-                    </table>
+                <div id="kuvvetler-ayriligi" class="my-6">
+                    <h4 class="text-center font-bold text-lg mb-4">📊 Kavram Haritası: Kuvvetler Ayrılığı</h4>
+                    <div class="flex flex-col md:flex-row gap-4 text-center">
+                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md">
+                            <h5 class="font-bold text-blue-800">YASAMA</h5>
+                            <p class="text-sm text-slate-600">(Madde 7)</p>
+                            <hr class="my-2">
+                            <p><strong>Organ:</strong> T.B.M.M.</p>
+                            <p><strong>Görev:</strong> Kanun Yapmak</p>
+                        </div>
+                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md">
+                            <h5 class="font-bold text-red-800">YÜRÜTME</h5>
+                            <p class="text-sm text-slate-600">(Madde 8)</p>
+                            <hr class="my-2">
+                            <p><strong>Organ:</strong> Cumhurbaşkanı</p>
+                            <p><strong>Görev:</strong> Uygulamak</p>
+                        </div>
+                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md">
+                            <h5 class="font-bold text-green-800">YARGI</h5>
+                            <p class="text-sm text-slate-600">(Madde 9)</p>
+                            <hr class="my-2">
+                            <p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p>
+                            <p><strong>Görev:</strong> Yargılamak</p>
+                        </div>
+                    </div>
                 </div>
 
                 <details id="madde-10" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
@@ -156,7 +161,7 @@
                     <div class="mt-3 border-t pt-3">
                         <div class="uyari-kutusu mt-3">
                             <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
-                            Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir. </p>
+                            Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir.</p>
                         </div>
                     </div>
                 </details>
