--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -108,7 +108,7 @@
                      <details id="madde-5" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Devletin temel amaç ve görevleri, Türk milletinin bağımsızlığını ve bütünlüğünü... korumak, kişilerin ve toplumun refah, huzur ve mutluluğunu sağlamak... engelleri kaldırmaya, insanın maddi ve manevi varlığının gelişmesi için gerekli şartları hazırlamaya çalışmaktır."</p></blockquote>
+                            <blockquote><p>"Devletin temel amaç ve görevleri... korumak... sağlamak... kaldırmaya... hazırlamaya çalışmaktır."</p></blockquote>
                             <div class="uyari-kutusu mt-3">
                                 <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
                             </div>
@@ -119,6 +119,30 @@
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                         <div class="mt-3 border-t pt-3">
                             <blockquote><p>"Egemenlik, kayıtsız şartsız Milletindir..."</p></blockquote>
+                            <p><strong>Hoca Yorumu:</strong> Bu madde, kuvvetler ayrılığı ilkesinin (Madde 7-8-9) anayasal dayanağıdır.</p>
+                        </div>
+                    </details>
+
+                    <details id="madde-7" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 7 - Yasama Yetkisi</summary>
+                        <div class="mt-3 border-t pt-3">
+                            <blockquote><p>"Yasama yetkisi Türk Milleti adına Türkiye Büyük Millet Meclisinindir. Bu yetki devredilemez."</p></blockquote>
+                            <p><strong>Hoca Yorumu:</strong> İki anahtar kelime: Yetki **Türk Milleti adına** kullanılır ve **devredilemez**.</p>
+                        </div>
+                    </details>
+
+                    <details id="madde-8" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 8 - Yürütme Yetkisi ve Görevi</summary>
+                        <div class="mt-3 border-t pt-3">
+                            <blockquote><p>"Yürütme yetkisi ve görevi, Cumhurbaşkanı tarafından, Anayasaya ve kanunlara uygun olarak kullanılır ve yerine getirilir."</p></blockquote>
+                        </div>
+                    </details>
+
+                    <details id="madde-9" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 9 - Yargı Yetkisi</summary>
+                        <div class="mt-3 border-t pt-3">
+                            <blockquote><p>"Yargı yetkisi, Türk Milleti adına bağımsız ve tarafsız mahkemelerce kullanılır."</p></blockquote>
+                             <p><strong>Hoca Yorumu:</strong> Yargının iki temel direği: **Bağımsızlık** ve **Tarafsızlık**.</p>
                         </div>
                     </details>
 
@@ -134,7 +158,7 @@
                     <details id="madde-10" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi</summary>
                         <div class="mt-3 border-t pt-3">
-                             <blockquote><p>"Herkes, dil, ırk, renk, cinsiyet, siyasi düşünce, felsefi inanç, din, mezhep ve benzeri sebeplerle ayırım gözetilmeksizin kanun önünde eşittir..."</p></blockquote>
+                             <blockquote><p>"Herkes, dil, ırk, renk, cinsiyet, siyasi düşünce... ayırım gözetilmeksizin kanun önünde eşittir."</p></blockquote>
                             <div class="uyari-kutusu mt-3">
                                 <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
                                 Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir.</p>
@@ -148,12 +172,11 @@
                              <blockquote><p>"Anayasa hükümleri... bağlayan temel hukuk kurallarıdır. Kanunlar Anayasaya aykırı olamaz."</p></blockquote>
                              <div class="ozet-kutusu mt-4">
                                 <h5 class="font-bold mb-2">📊 Kavram Haritası: Normlar Hiyerarşisi</h5>
-                                <ol class="list-decimal list-inside">
-                                    <li><strong>Anayasa</strong> (En üstün)</li>
-                                    <li>Kanun / Milletlerarası Antlaşmalar</li>
+                                <ol class="list-decimal list-inside text-center space-y-2">
+                                    <li class="font-bold text-lg">Anayasa</li>
+                                    <li class="font-medium">Kanun / Milletlerarası Antlaşmalar</li>
                                     <li>Cumhurbaşkanlığı Kararnamesi</li>
-                                    <li>Yönetmelik</li>
-                                    <li>(Diğer alt düzenleyici işlemler)</li>
+                                    <li class="text-sm">Yönetmelik</li>
                                 </ol>
                              </div>
                         </div>
@@ -165,18 +188,18 @@
                             Hızlı Tekrar Testi
                         </h3>
                         <div class="space-y-4 text-sky-800">
-                            <p><strong>1. Boşluk Doldurma:</strong> Türkiye Devleti bir ...................... .</p>
-                            <p><strong>2. Doğru/Yanlış:</strong> Anayasanın ilk üç maddesinin değiştirilmesi teklif edilebilir. (D/Y)</p>
-                            <p><strong>3. Bilgi Sorusu:</strong> Devletin temel amaç ve görevlerini akılda tutmak için kullanabileceğimiz 4 anahtar fiil nedir?</p>
-                            <p><strong>4. Kavram:</strong> Kanunların Anayasa'ya aykırı olamaması ilkesine ne ad verilir?</p>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>1. Boşluk Doldurma:</strong> Yargı yetkisi, Türk Milleti adına ................. ve tarafsız mahkemelerce kullanılır.</div>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>2. Doğru/Yanlış:</strong> Anayasanın 3. maddesi değiştirilebilir ancak değiştirilmesi teklif edilemez. (D/Y)</div>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>3. Bilgi Sorusu:</strong> Devletin temel amaç ve görevlerini özetleyen 4 anahtar fiil nedir?</div>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>4. Kavram:</strong> Kanunların Anayasa'ya aykırı olamaması ilkesine ne ad verilir?</div>
                         </div>
                         <details class="mt-4">
-                            <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevapları Göster</summary>
-                            <div class="mt-2 p-3 bg-white rounded-md border text-sm">
-                                <p>1. Cumhuriyettir</p>
-                                <p>2. Yanlış (Teklif dahi edilemez)</p>
-                                <p>3. Korumak, Sağlamak, Kaldırmak, Hazırlamak</p>
-                                <p>4. Anayasanın Üstünlüğü (Normlar Hiyerarşisi)</p>
+                            <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+                            <div class="mt-2 p-3 bg-white rounded-md border text-sm space-y-1">
+                                <p><strong>1. Cevap:</strong> bağımsız</p>
+                                <p><strong>2. Cevap:</strong> Yanlış (Değiştirilemez ve değiştirilmesi teklif dahi edilemez)</p>
+                                <p><strong>3. Cevap:</strong> Korumak, Sağlamak, Kaldırmak, Hazırlamak</p>
+                                <p><strong>4. Cevap:</strong> Anayasanın Üstünlüğü (Normlar Hiyerarşisi)</p>
                             </div>
                         </details>
                     </div>
@@ -184,10 +207,10 @@
                     <div class="bg-green-100 p-4 rounded-lg shadow mt-8 border-l-4 border-green-600">
                       <strong class="text-green-800">✅ Bu Bölümde Öğrendiklerimiz:</strong>
                       <ul class="list-disc pl-5 mt-2 text-green-900">
-                        <li>Anayasa'nın değiştirilemez hükümleri (Madde 1-4) ve anlamları.</li>
-                        <li>Devletin temel amaç ve görevlerinin neler olduğu (Madde 5).</li>
-                        <li>Egemenliğin millete ait olduğu ve bu yetkinin organlar eliyle kullanıldığı (Madde 6-9).</li>
-                        <li>Eşitlik ilkesi ve pozitif ayrımcılığın anayasal dayanağı (Madde 10).</li>
+                        <li>Anayasa'nın değiştirilemez hükümleri (Madde 1-4).</li>
+                        <li>Devletin temel amaç ve görevleri (Madde 5).</li>
+                        <li>Egemenliğin kaynağı ve kullanım şekli (Madde 6-9).</li>
+                        <li>Eşitlik ilkesi ve pozitif ayrımcılık (Madde 10).</li>
                         <li>Anayasanın hukuki üstünlüğü ve bağlayıcılığı (Madde 11).</li>
                       </ul>
                     </div>
